force-app/main/default/objects/Account/fields/Total_High_Value_Closed_Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_High_Value_Closed_Won_Amount__c</fullName>
    <label>Total High Value Closed Won Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>