force-app/main/default/objects/Account/fields/Total_Paid_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Invoice__c</fullName>
    <label>Total Paid Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>