force-app/main/default/objects/Account/fields/Type_of_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Subscription__c</fullName>
    <label>Type of Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>